Implemented security for Swagger API
